Varios cambios en UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">OkayApp</string>
+    <string name="app_name">YoloApp</string>
 
     <!-- ***************** Pantalla Menu ***************** -->
     <string name="menu_login">Iniciar Sesión</string>
