muestra correo, y activiti para cambiar la contraseña

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,9 @@
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- ***************** Pantalla Cambiar contraseña **************** -->
+    <string name="cha_pass_uno">Contraseña actual</string>
+    <string name="cha_pass_nueva">Nueva contraseña</string>
+    <string name="cha_pass_confir">Confirmar</string>
 </resources>
